--- a/help.css
+++ b/help.css
@@ -4,7 +4,7 @@
     background-color: sandybrown
 }
 .view{
-    background-image: url("tropical.jpg");
+    background-color:green;
     height: 100%;
     background-position: center;
     background-repeat: no-repeat;
